// ================================
// ENUMS
// ================================

Enum organization_nature_enum {
  public
  private
}

Enum organization_type_enum {
  club
  municipality
  city
  association
}

Enum admin_role_enum {
  super_admin
  moderator
  support
}

Enum role_enum {
  admin
  staff
  player
  coach
  owner
}

Enum facility_type_enum {
  municipal
  university
  club
  school
  community_center
}

Enum country_enum {
  Canada
  United States
}

Enum sport_enum {
  tennis
  pickleball
  badminton
  squash
}

Enum surface_type_enum {
  hard
  clay
  grass
  synthetic
  carpet
  asphalt
  concrete
}

Enum availability_enum {
  available
  under_maintenance
  closed
  reserved
}

// ================================
// MAIN ENTITIES
// ================================

// ================================
// AUTH (Supabase-managed)
// ================================
Table auth_users {
  id uuid [pk, note: 'Unique ID of the user in Supabase Auth']
  aud varchar(255) [note: 'Audience claim']
  role varchar(50) [note: 'Role claim for RLS policies']
  email varchar(255) [note: 'User email address']
  email_confirmed_at timestamptz
  phone varchar(20)
  phone_confirmed_at timestamptz
  confirmed_at timestamptz
  last_sign_in_at timestamptz
  app_metadata jsonb [note: 'Includes provider info: { provider, providers[] }']
  user_metadata jsonb [note: 'Custom editable user metadata']
  identities jsonb [note: 'List of linked provider identities']
  created_at timestamptz [default: `now()`, not null]
  updated_at timestamptz [default: `now()`, not null]
  is_anonymous boolean [default: false, not null]

  note: 'This table is managed by Supabase; do not write to it directly.'
}

// ================================
// PROFILE (Application user layer)
// ================================
Table profiles {
  id uuid [pk, ref: > auth_users.id, note: 'References Supabase auth.users.id']
  full_name varchar(255)
  display_name varchar(100)
  avatar_url varchar(255)
  birth_date date
  locale varchar(10) [default: 'en-CA', not null]
  timezone varchar(50) [default: 'America/Toronto', not null]
  two_factor_enabled boolean [default: false, not null]
  last_active_at timestamptz
  is_active boolean [default: true, not null]
  created_at timestamptz [default: `now()`, not null]
  updated_at timestamptz [default: `now()`, not null]
}

// ================================
// PLATFORM ADMIN
// ================================
Table admins {
  id uuid [pk, ref: > profiles.id]
  role admin_role_enum [not null]
  permissions jsonb
  assigned_at timestamptz [default: `now()`, not null]
  notes text
}

// ================================
// ORGANIZATION
// ================================
Table organizations {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [ref: > profiles.id, note: 'Primary account owner']
  name varchar(255) [not null]
  nature organization_nature_enum [not null, note: "public vs privée"]

  email varchar(255) [unique]
  phone varchar(20)
  slug varchar(255) [unique, not null, note: 'URL-friendly identifier']

  address varchar(255)
  city varchar(100)
  country country_enum
  postal_code varchar(20)

  type organization_type_enum
  description text
  website varchar(255)
  
  is_active boolean [default: true, not null]
  created_at timestamptz [default: `now()`, not null]
  updated_at timestamptz [default: `now()`, not null]

  indexes {
    name [name: 'idx_org_name']
    (city, country) [name: 'idx_org_location']
  }
}

// ================================
// ORGANIZATION MEMBER
// ================================
Table organization_members {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > profiles.id, not null]
  organization_id uuid [ref: > organizations.id, not null]
  role role_enum [not null]
  permissions jsonb
  joined_at timestamptz [default: `now()`, not null]
  left_at timestamptz
  invited_by uuid [ref: > profiles.id]
  
  indexes {
    (user_id, organization_id) [unique]
  }
}

// ================================
// ENUMS
// ================================
Enum facility_contact_type_enum {
  general
  reservation
  maintenance
  other
}

// ================================
// SPORTS
// ================================
Table sports {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null, unique]
  slug varchar(100) [not null, unique]
  description text
  is_active boolean [not null, default: true]
  attributes jsonb [note: 'Optional metadata (e.g., common court dimensions, tags)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    name [name: 'idx_sports_name']
    is_active [name: 'idx_sports_is_active']
  }

  note: 'Defines supported sports within the application.'
}

// ================================
// FACILITIES
// ================================
Table facilities {
  id uuid [pk, default: `gen_random_uuid()`]
  organization_id uuid [ref: > organizations.id, not null]
  name varchar(255) [not null, note: 'Site name, e.g. Parc Jeanne-Mance']
  facility_type facility_type_enum
  slug varchar(255) [not null, unique, note: 'URL-friendly identifier (consider scoping to organization if you allow same names)']
  description text
  address varchar(255)
  city varchar(100)
  country country_enum
  postal_code varchar(20)
  // PostGIS geography point for spatial queries; if PostGIS is not used, keep lat/long columns instead
  location geography(Point,4326) [note: 'Use PostGIS geography for fast geo-queries (lat/lon).']
  latitude decimal(9,6) [note: 'Optional: keep for back-compatibility; populate from location']
  longitude decimal(9,6) [note: 'Optional: keep for back-compatibility; populate from location']
  attributes jsonb [note: 'Flexible: opening_hours, amenities, pricing, accessibility, notes']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  archived_at timestamptz

  indexes {
    slug [name: 'idx_facilities_slug']
    organization_id [name: 'idx_facilities_org']
    (city, country) [name: 'idx_facilities_location']
    is_active [name: 'idx_facilities_active']
    created_at [name: 'idx_facilities_created_at']
  }

  note: 'Facilities are physical sites with courts; use attributes for extensible metadata.'
}

Table facility_contacts {
  id uuid [pk, default: `gen_random_uuid()`]
  facility_id uuid [ref: > facilities.id, not null]
  
  phone varchar(30)
  email varchar(255)
  website varchar(255)
  
  is_primary boolean [not null, default: false, note: 'True if this is the main contact for the facility']
  contact_type facility_contact_type_enum [not null]
  notes text
  attributes jsonb [note: 'Flexible metadata: hours, preferred contact method, languages, etc.']
  sport_id uuid [ref: > sports.id]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    facility_id [name: 'idx_facility_contacts_facility']
    is_primary [name: 'idx_facility_contacts_primary']
  }

  note: 'Contacts for a facility (general, reservation, sport-specific, etc.). Decoupled from sports for flexibility.'
}

// ================================
// FACILITY IMAGES
// ================================
Table facility_images {
  id uuid [pk, default: `gen_random_uuid()`]
  facility_id uuid [ref: > facilities.id, not null]
  storage_key varchar(255) [not null, unique, note: 'Stable cloud storage key (S3/Supabase)']
  url text [not null, note: 'Accessible URL (may be signed)']
  thumbnail_url text
  description text
  display_order int [not null, default: 0]
  is_primary boolean [not null, default: false]
  file_size bigint
  mime_type varchar(100)
  metadata jsonb
  uploaded_at timestamptz [not null, default: `now()`]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    facility_id [name: 'idx_facility_images_facility']
    (facility_id, display_order) [name: 'idx_facility_images_order']
    storage_key [unique, name: 'uq_facility_images_storage_key']
  }

  note: 'Images for facilities; use storage_key to dedupe and manage cloud storage lifecycle.'
}

// ================================
// FACILITY_SPORTS (which sports a facility supports)
// ================================
Table facility_sports {
  id uuid [pk, default: `gen_random_uuid()`]
  facility_id uuid [ref: > facilities.id, not null]
  sport_id uuid [ref: > sports.id, not null]
  
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    facility_id [name: 'idx_facility_sports_facility']
    sport_id [name: 'idx_facility_sports_sport']
    (facility_id, sport_id) [unique, name: 'uq_facility_sports_facility_sport']
  }

  note: 'Links facilities to the sports they support. Attributes can hold sport-specific contact or scheduling details.'
}

// ================================
// COURTS
// ================================
Table courts {
  id uuid [pk, default: `gen_random_uuid()`]
  facility_id uuid [ref: > facilities.id, not null]
  surface_type surface_type_enum
  lighting boolean [not null, default: false]
  indoor boolean [not null, default: false]
  name varchar(100)
  court_number int [note: 'Unique per facility (optional)']
  lines_marked_for_multiple_sports boolean [not null, default: false]
  availability_status availability_enum [not null, default: 'available']
  attributes jsonb [note: 'Court-specific metadata: dimensions, nets, wall height, booking rules']
  notes text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    facility_id [name: 'idx_courts_facility']
    sport_id [name: 'idx_courts_sport']
    availability_status [name: 'idx_courts_availability']
    (sport_id, availability_status) [name: 'idx_courts_sport_availability']
    (facility_id, court_number) [unique, name: 'uq_courts_facility_court_number']
  }

  note: 'Individual courts/rinks/fields within a facility.'
}

// ================================
// COURT SPORTS
// ================================
Table court_sports {
  id uuid [pk, default: `gen_random_uuid()`]
  court_id uuid [ref: > courts.id, not null]
  sport_id uuid [ref: > sports.id, not null]
  
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}